se modifica el input checkbox en las asignaturas para que bindee con el atributo de la misma (asignatura.checked)

--- a/WebContent/app/views/planesEstudio.html
+++ b/WebContent/app/views/planesEstudio.html
@@ -48,7 +48,7 @@
 								<div class="panel-body">
 									<div class="checkbox" ng-repeat="asignatura in asignaturas | orderBy:['extra','nombre']">
 										<label>
-											<input type="checkbox" value="asignatura.checked">{{asignatura.nombre}} {{(asignatura.extra)?' (Extracurricular)':''}}
+											<input type="checkbox" ng-checked="asignatura.checked" ng-model="asignatura.checked">{{asignatura.nombre}} {{(asignatura.extra)?' (Extracurricular)':''}}
 										</label>
 									</div>
 								</div>
