--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -1,4 +1,7 @@
 <div class="row" ng-show="logueado">
+	<div class="pull-right" ng-if="referencias!=undefined && referencias!=null && referencias.lenght!=0">
+		<referencia></referencia>
+	</div>
 	<!-- Page Header -->
 	<page-header></page-header>
 	<!-- Alert Modal -->
@@ -7,39 +10,41 @@
 	<modal-confirm></modal-confirm>
 
 	<!-- Form Nuevo -->
-	<div class="row col-sm-10">
+	<div class="row">
 		<!-- Panel -->
-		<div class="panel panel-primary">
-			<!-- Panel Header -->
-			<div class="panel-heading">
-				<h4 class="panel-title">
-					<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nuevo {{nombreForm}} 
-						<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': colapsarFormulario, 'glyphicon-chevron-up': !colapsarFormulario}"></i>
-					</a>
-				</h4>
-			</div>
-			<!-- Panel Body -->
-			<div class="panel-body" collapse="colapsarFormulario">
-				<form role="form" name="formAction">
-					<!-- Informacion Personal -->
-					<docente-info-personal></docente-info-personal>
-					<!-- Informacion Administrativa -->
-					<docente-info-administrativa></docente-info-administrativa>
-					<!-- Domicilios -->
-					<docente-domicilios></docente-domicilios>
-					<!-- Medios de Contacto -->
-					<docente-medios-contacto></docente-medios-contacto>
-					<!-- Formacion Academica -->
-					<docente-form-academica></docente-form-academica>
-					<!-- Empleos -->
-					<docente-empleos></docente-empleos>
-				</form>
-			</div>
-			<!-- Panel Footer : Buttons -->
-			<div class="panel-footer" ng-show="!colapsarFormulario">
-				<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
-				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
-				<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
+		<div class="col-sm-10">
+			<div class="panel panel-primary">
+				<!-- Panel Header -->
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nuevo {{nombreForm}} 
+							<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': colapsarFormulario, 'glyphicon-chevron-up': !colapsarFormulario}"></i>
+						</a>
+					</h4>
+				</div>
+				<!-- Panel Body -->
+				<div class="panel-body" collapse="colapsarFormulario">
+					<form role="form" name="formAction">
+						<!-- Informacion Personal -->
+						<docente-info-personal></docente-info-personal>
+						<!-- Informacion Administrativa -->
+						<docente-info-administrativa></docente-info-administrativa>
+						<!-- Domicilios -->
+						<docente-domicilios></docente-domicilios>
+						<!-- Medios de Contacto -->
+						<docente-medios-contacto></docente-medios-contacto>
+						<!-- Formacion Academica -->
+						<docente-form-academica></docente-form-academica>
+						<!-- Empleos -->
+						<docente-empleos></docente-empleos>
+					</form>
+				</div>
+				<!-- Panel Footer : Buttons -->
+				<div class="panel-footer" ng-show="!colapsarFormulario">
+					<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
+					<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
+					<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
+				</div>
 			</div>
 		</div>
 	</div>
