--- a/WebContent/app/views/layout/menu.html
+++ b/WebContent/app/views/layout/menu.html
@@ -16,6 +16,12 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="dropdown"><a href="" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-expanded="false">Búsquedas<span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#/busquedas">Buscar</a></li>
+							</ul></li>
+						<li class="dropdown"><a href="" class="dropdown-toggle"
 							data-toggle="dropdown" role="button" aria-expanded="false">Personal
 								<span class="caret"></span>
 						</a>
