--- a/WebContent/app/views/usuarios.html
+++ b/WebContent/app/views/usuarios.html
@@ -93,7 +93,7 @@
 							<td class="text-capitalize">{{usr.apellido}}</td>
 							<td class="text-capitalize">{{usr.nombre}}</td>
 							<td>{{usr.username}}</td>
-							<td class="text-center"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true" ng-show="usr.esAdmin"></span></td>
+							<td class="text-center"><span class="glyphicon glyphicon-check" aria-hidden="true" ng-show="usr.esAdmin"></span></td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(usr)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(usr)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
