--- a/WebContent/app/views/partials/busquedas/partialFiltroDocentes.html
+++ b/WebContent/app/views/partials/busquedas/partialFiltroDocentes.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-success">
 			<div class="panel-heading">
 				edad
 			</div>
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="col-sm-3">
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				legajo
 			</div>
@@ -24,7 +24,7 @@
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-danger">
 			<div class="panel-heading">
 				fechaAlta
 			</div>
@@ -43,13 +43,13 @@
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-info">
 			<div class="panel-heading">
 				antiguedad
 			</div>
 			<div class="panel-body">
 				<div class="btn-group" data-toggle="buttons">
-					<input class="form-control" type="number" maxlength="2" max="80" min="0">
+					<input class="form-control" type="number" maxlength="2" max="80" min="0" placeholder="Años">
 				</div>
 			</div>
 		</div>
@@ -57,11 +57,11 @@
 </div>
 <div class="row">
 	<div class="col-sm-3">
-		<div class="panel panel-default">
+		<div class="panel panel-success">
 			<div class="panel-heading">
 				tiposPersonal 
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTP">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposPersonal()" >
 					<label class="btn btn-default" ng-repeat="tp in tiposPersonal"><input type="checkbox" autocomplete="off">{{tp.nombre}}</label> 
 				</div>
@@ -69,11 +69,11 @@
 		</div>
 	</div>
 	<div class="col-sm-3">
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				tiposSituacionRevista
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTSR">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposSituacionRevista()">
 					<label class="btn btn-default" ng-repeat="tsr in tiposSituacionRevista"><input type="checkbox" autocomplete="off">{{tsr.nombre}}</label> 
 				</div>
@@ -81,11 +81,11 @@
 		</div>
 	</div>
 	<div class="col-sm-4">
-		<div class="panel panel-default">
+		<div class="panel panel-danger">
 			<div class="panel-heading">
 				tiposSituacionActual
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTSA">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposSituacionActual()" >
 					<label class="btn btn-default" ng-repeat="tsa in tiposSituacionActual"><input type="checkbox" autocomplete="off">{{tsa.nombre}}</label> 
 				</div>
@@ -93,11 +93,11 @@
 		</div>
 	</div>
 	<div class="col-sm-6">
-		<div class="panel panel-default">
+		<div class="panel panel-info">
 			<div class="panel-heading">
 				tiposMotivo
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTM">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposMotivo()" >
 					<label class="btn btn-default" ng-repeat="tm in tiposMotivo"><input type="checkbox" autocomplete="off">{{tm.nombre}}</label> 
 				</div>
@@ -105,11 +105,11 @@
 		</div>
 	</div>
 	<div class="col-sm-6">
-		<div class="panel panel-default">
+		<div class="panel panel-success">
 			<div class="panel-heading">
 				tiposFormacion
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTF">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposFormacion()">
 					<label class="btn btn-default" ng-repeat="tf in tiposFormacion"><input type="checkbox" autocomplete="off">{{tf.nombre}}</label> 
 				</div>
@@ -119,11 +119,11 @@
 </div>
 <div class="row">
 	<div class="col-sm-4">
-		<div class="panel panel-default">
+		<div class="panel panel-warning">
 			<div class="panel-heading">
 				tiposEstadoContractual
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinTEC">
 				<div class="btn-group" data-toggle="buttons" ng-init="listarTiposEstadoContractual()">
 					<label class="btn btn-default" ng-repeat="tec in tiposEstadoContractual"><input type="checkbox" autocomplete="off">{{tec.nombre}}</label> 
 				</div>
@@ -131,11 +131,11 @@
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-danger">
 			<div class="panel-heading">
 				provincias
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinPr">
 				<div class="btn-group" ng-init="listarProvincias()">
 					<select id="provincia" class="form-control text-capitalize"
 						ng-options="provincia.nombre for provincia in provincias" required ng-model="provinciaSel">
@@ -146,11 +146,11 @@
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-info">
 			<div class="panel-heading">
 				partidos
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinPa">
 				<div class="btn-group" ng-init="listarPartidos()">
 					<select id="partido" class="form-control text-capitalize"
 						ng-options="partido.nombre for partido in partidos | includeFromProvincia:provinciaSel.nombre"
@@ -162,11 +162,11 @@
 		</div>
 	</div>
 	<div class="col-sm-2">
-		<div class="panel panel-default">
+		<div class="panel panel-success">
 			<div class="panel-heading">
 				localidades
 			</div>
-			<div class="panel-body">
+			<div class="panel-body" id="spinL">
 				<div class="btn-group" ng-init="listarLocalidades()">
 					<select id="localidad" class="form-control text-capitalize"
 						ng-options="local.nombre for local in localidades | includeFromPartido:partidoSel.nombre"
