--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="msegErp">
+    <wb-module deploy-name="gedo">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
-        <property name="java-output-path" value="/msegErp/build/classes"/>
-        <property name="context-root" value="msegErp"/>
+        <property name="java-output-path" value="/gedo/build/classes"/>
+        <property name="context-root" value="gedo"/>
     </wb-module>
 </project-modules>
