--- a/WebContent/app/views/partials/docente/partialDocenteListadoFiltro.html
+++ b/WebContent/app/views/partials/docente/partialDocenteListadoFiltro.html
@@ -1,5 +1,5 @@
 <div ng-show="logueado" id="spinDocentesListadoFiltro">
 	<ul class="list-unstyled">
-		<li ng-repeat="d in docentes">{{d}}</li>
+		<li ng-repeat="d in docentes"><pre>{{d}}</pre></li>
 	</ul>
 </div>
